--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT = 5000;
+MONGODB_URL = "mongodb+srv://ecommerce-db:w6cwLXvgzDoAZ3Ai@ecommerce.i9vlcva.mongodb.net/?retryWrites=true&w=majority";
