--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@img/sharp-win32-x64": "^0.33.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
@@ -23,7 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "sharp": "^0.33.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
