--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "serve build -s -n -L -p $PORT",
     "build": "CI=false react-scripts build",
     "server": "nodemon index.js"
   },
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "razorpay": "^2.9.2",
+    "serve": "^14.2.1",
     "sharp": "^0.33.0",
     "slugify": "^1.6.6",
     "uniqid": "^5.4.0"
